# advent2024

./: CMakeLists.txt
day10_1/: main.cpp
day10_2/: main.cpp
day11_1/: main.cpp
day11_2/: main.cpp
day12_1/: main.cpp
day12_2/: main.cpp
day1_1/: main.cpp
day1_2/: main.cpp
day2_1/: main.cpp
day2_2/: main.cpp
day3_1/: main.cpp
day3_2/: main.cpp
day4_1/: main.cpp
day4_2/: main.cpp
day5_1/: main.cpp
day5_2/: main.cpp
day6_1/: main.cpp
day6_2/: main.cpp
day7_1/: main.cpp
day7_2/: main.cpp
day8_1/: main.cpp
day8_2/: main.cpp
day9_1/: main.cpp
day9_2/: main.cpp
include/: Utils.hpp
